--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,6 +1,6 @@
-NAME = phonebook
+NAME = account
 
-SRCS = main.cpp phonebook.cpp
+SRCS = test.cpp Account.cpp
 CXX = c++
 
 FLAGS = -std=c++98 -Wall -Wextra -Werror
