--- a/cpp_01/ex00/Makefile
+++ b/cpp_01/ex00/Makefile
@@ -1,3 +1,20 @@
 CXX = c++
 
-CXXFLAGS = -Wall -W
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+
+NAME = zombie
+
+SRC = main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
+OBJ = $(SRC:.cpp=.o)
+
+all: $(NAME)
+
+$(NAME): $(OBJ)
+	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJ)
+
+clean:
+	rm -f $(OBJ)
+fclean: clean
+	rm -f $(NAME)
+re: fclean all
+
