--- a/cpp_01/ex03/Makefile
+++ b/cpp_01/ex03/Makefile
@@ -5,45 +5,28 @@
 #                                                     +:+ +:+         +:+      #
 #    By: aabashee <aabashee@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/06/26 13:36:40 by aabashee          #+#    #+#              #
-#    Updated: 2024/06/26 13:36:43 by aabashee         ###   ########.fr        #
+#    Created: 2024/06/26 13:39:40 by aabashee          #+#    #+#              #
+#    Updated: 2024/06/26 13:39:42 by aabashee         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-# Compiler
-CXX = c++
-
-# Compiler Flags
+NAME = unnercessaryviolence
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CC = c++
+SRC = main.cpp HumanA.cpp HumanB.cpp Weapon.cpp
+INCLUDES = Weapon.hpp HumanA.hpp HumanB.hpp
 
-# Output Executable Name
-NAME = zombie
+OBJ = ${SRC:%.cpp=%.o}
 
-# Source Files
-SRC = main.cpp Zombie.cpp  zombieHorde.cpp
+all: ${NAME}
 
-# Object Files
-OBJ = $(SRC:.cpp=.o)
+${NAME}:${OBJ}
+		${CC} ${CXXFLAGS}  ${OBJ} -o $(NAME)
 
-# All Target (default)
-all: $(NAME)
-
-# Link Object Files to Create Executable
-$(NAME): $(OBJ)
-	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJ)
-
-# Compile Each Source File into an Object File
-%.o: %.cpp
-	$(CXX) $(CXXFLAGS) -c $< -o $@
-
-# Clean Object Files
-clean:
-	rm -f $(OBJ)
-
-# Clean Object Files and Executable
 fclean: clean
-	rm -f $(NAME)
+		@rm -rf ${NAME}
 
-# Rebuild
+clean:
+		@rm -rf ${OBJ}
+
 re: fclean all
-
