--- a/cpp_01/ex00/Makefile
+++ b/cpp_01/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: aabashee <aabashee@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/06/26 13:35:29 by aabashee          #+#    #+#              #
+#    Updated: 2024/06/26 13:35:32 by aabashee         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 CXX = c++
 
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
