--- a/cpp_01/ex02/Makefile
+++ b/cpp_01/ex02/Makefile
@@ -5,45 +5,31 @@
 #                                                     +:+ +:+         +:+      #
 #    By: aabashee <aabashee@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/06/26 13:36:40 by aabashee          #+#    #+#              #
-#    Updated: 2024/06/26 13:36:43 by aabashee         ###   ########.fr        #
+#    Created: 2024/06/26 13:38:30 by aabashee          #+#    #+#              #
+#    Updated: 2024/06/26 13:38:32 by aabashee         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-# Compiler
-CXX = c++
+NAME = address
 
-# Compiler Flags
+CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-# Output Executable Name
-NAME = zombie
+SRCS = main.cpp
 
-# Source Files
-SRC = main.cpp Zombie.cpp  zombieHorde.cpp
+OBJS = $(SRCS:.cpp=.o)
 
-# Object Files
-OBJ = $(SRC:.cpp=.o)
-
-# All Target (default)
 all: $(NAME)
 
-# Link Object Files to Create Executable
-$(NAME): $(OBJ)
-	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJ)
+$(NAME): $(OBJS)
+	$(CXX) $(CXXFLAGS) $(OBJS) -o $(NAME)
 
-# Compile Each Source File into an Object File
-%.o: %.cpp
-	$(CXX) $(CXXFLAGS) -c $< -o $@
-
-# Clean Object Files
 clean:
-	rm -f $(OBJ)
+	rm -f $(OBJS)
 
-# Clean Object Files and Executable
 fclean: clean
 	rm -f $(NAME)
 
-# Rebuild
 re: fclean all
 
+.PHONY: clean fclean all re
