--- a/cpp_03/ex01/Makefile
+++ b/cpp_03/ex01/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: aabashee <aabashee@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/07/04 13:40:18 by aabashee          #+#    #+#              #
+#    Updated: 2024/07/04 13:40:19 by aabashee         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = ScavTrap
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 CC = c++
